--- a/src/components/Name/style.css
+++ b/src/components/Name/style.css
@@ -8,7 +8,7 @@
     text-transform: uppercase;
 }
 .name p:nth-of-type(2) {
-    color: #fff;
+    color: #515151;
     font-size: 25px;
     font-weight: 700;
     text-transform: uppercase;
